fix: gaps between cards

--- a/src/app/pages/ebikes/ebikes.component.scss
+++ b/src/app/pages/ebikes/ebikes.component.scss
@@ -9,7 +9,7 @@
 }
 
 @media #{$breakpoint-large} {
-  .grid {
+  .grid.wide {
     grid-template-columns: 1fr 1fr;
   }
 }
